--- a/sidebery/styles.css
+++ b/sidebery/styles.css
@@ -9,6 +9,7 @@
     --ntb-btn-height: 28px;
     --tabs-lvl-opacity: 0.4;
     --tabs-activated-shadow: inset 0 0 0 1px light-dark(rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0.3));
+    --tabs-activated-bg: light-dark(rgba(0, 0, 0, 0.045), var(--s-act-el-bg, #ffffff24)); /* light gets minor darkening, dark stays the same */
 }
 
 /* ==================== Tabs ====================== */
