--- a/floorp/sidebery/styles.css
+++ b/floorp/sidebery/styles.css
@@ -1,18 +1,3 @@
-/* ============ Define all variable ============== */
-@media (prefers-color-scheme: light) {
-    #root.root {
-        --tabs-activated-bg: rgba(0, 0, 0, 0.1);
-        --tabs-activated-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.8);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    #root.root {
-        --tabs-activated-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
-        --frame-bg: #404040;
-    }
-}
-
 #root.root {
     --tabs-indent: 18px;
     --tabs-inner-gap: 6px;
@@ -22,6 +7,17 @@
     --nav-btn-height: 28px;
     --ntb-btn-height: 28px;
     --tabs-lvl-opacity: 0.4;
+    --frame-bg: var(--s-toolbar-bg);
+    --tabs-activated-bg: color-mix(in srgb,var(--s-frame-bg),#0000 25%);
+    --frame-el-overlay-hover-bg: color-mix(in srgb,var(--s-frame-bg),#0000 50%);
+    --toolbar-el-overlay-hover-bg: color-mix(in srgb,var(--s-frame-bg),#0000 25%);
+}
+
+#root[data-frame-color-scheme="dark"] .Tab[data-colorized="true"] {
+    --tabs-activated-shadow: var(--active-el-shadow);
+}
+#root[data-frame-color-scheme="light"] .Tab[data-colorized="true"] {
+    --tabs-activated-shadow: var(--active-el-shadow);
 }
 
 /* ==================== Tabs ====================== */
