--- a/sidebery/styles.css
+++ b/sidebery/styles.css
@@ -9,8 +9,6 @@
     --tabs-lvl-opacity: 0.4;
     --frame-bg: var(--s-toolbar-bg);
     --tabs-activated-bg: color-mix(in srgb,var(--s-frame-bg),#0000 25%);
-    --frame-el-overlay-hover-bg: color-mix(in srgb,var(--s-frame-bg),#0000 50%);
-    --toolbar-el-overlay-hover-bg: color-mix(in srgb,var(--s-frame-bg),#0000 25%);
 }
 
 
@@ -23,6 +21,7 @@
 
 
 /* ==================== Tabs ====================== */
+
 /*------- Tab Colour ------------*/
 .scrollable .Tab .color-layer {
     width: 32px !important;
@@ -37,6 +36,14 @@
     padding: 0 6px !important;
 }
 
+/*------- Tab Close Button ------------*/
+.Tab .close-icon {
+    height: 24px;
+    width: 24px;
+    top: calc(50% - 12px);
+    left: calc(50% - 12px);
+}
+
 /*------- grouped tabs ------------*/
 /*Tab group expand icon */
 .Tab .exp-icon {
@@ -47,3 +54,23 @@
 #root.root .Tab .child-count {
     opacity: 1 !important;
 }
+
+
+/* PINNED TABS */
+
+.Tab[data-pin="true"] .body {
+    background: #f2f2f220;
+    box-shadow: 0px 2px 1px #00000000;
+}
+
+.Tab[data-pin="true"][data-active="true"] {
+    background-color: #ffffff40;
+    border-radius: calc(var(--general-border-radius) + 2px);
+}
+
+.PinnedTabsBar .tab-wrapper {
+    flex-grow: 1;
+    min-width: 55px;
+    --tabs-pinned-width: auto;
+}
+
