fix hide-tabs-bar for firefox 137

--- a/profile/chrome/userChrome.css
+++ b/profile/chrome/userChrome.css
@@ -1,3 +1,3 @@
 @import url("global/tweaks.css");
 @import url("tweaks/adjust-sidebar.css");
-@import url("tweaks/hide-tabs-bar.css") (-moz-bool-pref: "uc.tweak.hide-tabs-bar");
+@import url("tweaks/hide-tabs-bar.css");
